# rag-qa-system

./: .gitignore  README.md  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 0e9a634a0ac4_initial_migration.py  283c64f33fb7_initial_migration.py  c3349615dfd2_enable_pgvector_extension.py
app/: .dockerignore  README.md  main.py  pyproject.toml  start.sh  worker.py
app/api/: documents.py  qa.py
app/common/: config.py  health_check.py  logger.py
app/database/: __init__.py  s3.py  session.py
app/database/models/: document.py
app/models/: __init__.py  document.py  embedding.py  qa.py
app/repositories/: document_repository.py
app/services/: document_processor.py  document_service.py  qa_service.py
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  pytest.ini  test_base.py  test_documents.py  test_qa.py
